--- a/about.html
+++ b/about.html
@@ -31,17 +31,7 @@
         alt=""
       />
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error
-        consectetur laboriosam minus distinctio soluta ipsam eum sapiente quas,
-        neque expedita earum repellendus provident voluptatum facere sed quo!
-        Dolorum facilis, recusandae velit animi tenetur modi blanditiis
-        perferendis iusto deleniti, expedita fuga fugit alias odit. Quisquam,
-        saepe, ut et culpa deserunt numquam quis porro dolorum tempore
-        voluptatibus minus laboriosam natus veniam, sint dolorem quae molestiae
-        commodi veritatis velit cupiditate quod explicabo esse. A dignissimos
-        cumque iusto recusandae soluta ut, iste consequatur reprehenderit,
-        atque, nemo ducimus eos ratione ad ipsum consectetur fugit et incidunt.
-        Quo aut natus pariatur aspernatur perspiciatis minima laborum quam.
+        I need actual text here
       </p>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, quasi
