about page update

--- a/about.html
+++ b/about.html
@@ -31,7 +31,53 @@
         alt=""
       />
       <p>
-        I need actual text here
+        Vince Staples, born Vincent Jamal Staples on July 2, 1993, in Compton,
+        California, grew up in a turbulent environment shaped by gang culture,
+        violence, and socioeconomic challenges. He spent his formative years in
+        Long Beach, California, specifically in the Ramona Park neighborhood,
+        which would later influence much of his music. Raised in a large family,
+        Staples faced the pressures of gang life early on, as many of his peers
+        and relatives were involved in local gangs. While his surroundings often
+        drew people into cycles of crime, Vince initially managed to stay out of
+        trouble, thanks in part to his mother, who sought to keep him away from
+        dangerous influences. However, as a teenager, Staples became more deeply
+        involved in the street life that surrounded him, eventually affiliating
+        with the Crips gang. His experiences growing up in these challenging
+        circumstances, witnessing violence, and the struggles of the people
+        around him would later serve as the foundation for much of his
+        storytelling in music. Vince Staples didn't initially see music as a
+        viable career path. His introduction to the music scene came through
+        friendships with members of the hip-hop collective Odd Future,
+        particularly Earl Sweatshirt. Staples would accompany Earl and other
+        members of the group to the studio, where he began to see the potential
+        of using music as an outlet for his thoughts and experiences. This
+        exposure to the recording process and the encouragement of his peers led
+        him to consider rap as a serious pursuit. His breakthrough came in 2011
+        when he appeared on the track "epaR" from Earl Sweatshirt's mixtape
+        *Earl*. The track gave him his first taste of recognition within the
+        underground rap scene. Encouraged by the positive reception, Staples
+        began working on his own music. His first solo project, a mixtape titled
+        *Shyne Coldchain Vol. 1*, was released in 2011, showcasing his raw
+        storytelling and gritty lyrics that reflected the harsh realities of his
+        upbringing. Staples gained further momentum when he caught the attention
+        of veteran rapper and producer Mac Miller, who invited him to
+        collaborate. Together, they worked on Vince’s *Stolen Youth* mixtape in
+        2013, with Miller producing much of the project under the alias Larry
+        Fisherman. The mixtape helped Staples garner critical acclaim and
+        introduced him to a wider audience. His lyrics stood out for their
+        sharp, observational style and introspective nature, focusing on themes
+        such as poverty, violence, and existential struggles. In 2014, Staples
+        signed to Def Jam Recordings and released his debut EP, *Hell Can Wait*,
+        which included the popular single "Hands Up," a politically charged
+        track addressing police brutality. His debut studio album, *Summertime
+        '06*, followed in 2015, marking a turning point in his career. The
+        album, produced largely by No I.D., was a critical success, praised for
+        its dense production and candid exploration of his life growing up in
+        Long Beach. Vince Staples has continued to evolve as an artist,
+        balancing mainstream success with his commitment to telling authentic,
+        unvarnished stories about his community. His music is a reflection of
+        the duality of his experiences: navigating between the violence of his
+        youth and his efforts to rise above it.
       </p>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, quasi
@@ -97,13 +143,13 @@
         <ul class="nav footer-nav">
           <li>
             <a href="https://www.facebook.com/vincestaples/" target="_blank"
-              ><img
-                src="images/facebook logo.jpg"
-                alt="facebook logo"
+              ><img src="images/facebook logo.jpg" alt="facebook logo"
             /></a>
           </li>
           <li>
-            <a href="https://www.instagram.com/vincestaples/?hl=en" target="_blank"
+            <a
+              href="https://www.instagram.com/vincestaples/?hl=en"
+              target="_blank"
               ><img src="images/instagram logo.jpg" alt="instagram logo"
             /></a>
           </li>
