even better about page

--- a/about.html
+++ b/about.html
@@ -37,104 +37,63 @@
         Long Beach, California, specifically in the Ramona Park neighborhood,
         which would later influence much of his music. Raised in a large family,
         Staples faced the pressures of gang life early on, as many of his peers
-        and relatives were involved in local gangs. While his surroundings often
-        drew people into cycles of crime, Vince initially managed to stay out of
-        trouble, thanks in part to his mother, who sought to keep him away from
-        dangerous influences. However, as a teenager, Staples became more deeply
-        involved in the street life that surrounded him, eventually affiliating
-        with the Crips gang. His experiences growing up in these challenging
-        circumstances, witnessing violence, and the struggles of the people
-        around him would later serve as the foundation for much of his
-        storytelling in music. Vince Staples didn't initially see music as a
-        viable career path. His introduction to the music scene came through
-        friendships with members of the hip-hop collective Odd Future,
-        particularly Earl Sweatshirt. Staples would accompany Earl and other
-        members of the group to the studio, where he began to see the potential
-        of using music as an outlet for his thoughts and experiences. This
-        exposure to the recording process and the encouragement of his peers led
-        him to consider rap as a serious pursuit. His breakthrough came in 2011
-        when he appeared on the track "epaR" from Earl Sweatshirt's mixtape
-        *Earl*. The track gave him his first taste of recognition within the
-        underground rap scene. Encouraged by the positive reception, Staples
-        began working on his own music. His first solo project, a mixtape titled
-        *Shyne Coldchain Vol. 1*, was released in 2011, showcasing his raw
-        storytelling and gritty lyrics that reflected the harsh realities of his
-        upbringing. Staples gained further momentum when he caught the attention
-        of veteran rapper and producer Mac Miller, who invited him to
-        collaborate. Together, they worked on Vince’s *Stolen Youth* mixtape in
-        2013, with Miller producing much of the project under the alias Larry
-        Fisherman. The mixtape helped Staples garner critical acclaim and
-        introduced him to a wider audience. His lyrics stood out for their
-        sharp, observational style and introspective nature, focusing on themes
-        such as poverty, violence, and existential struggles. In 2014, Staples
-        signed to Def Jam Recordings and released his debut EP, *Hell Can Wait*,
-        which included the popular single "Hands Up," a politically charged
-        track addressing police brutality. His debut studio album, *Summertime
-        '06*, followed in 2015, marking a turning point in his career. The
-        album, produced largely by No I.D., was a critical success, praised for
-        its dense production and candid exploration of his life growing up in
-        Long Beach. Vince Staples has continued to evolve as an artist,
-        balancing mainstream success with his commitment to telling authentic,
-        unvarnished stories about his community. His music is a reflection of
-        the duality of his experiences: navigating between the violence of his
-        youth and his efforts to rise above it.
+        and relatives were involved in local gangs.
       </p>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, quasi
-        reiciendis. Dolore placeat ducimus nemo incidunt, blanditiis qui ab iste
-        temporibus reprehenderit quaerat modi ut corrupti quam. Aliquam fugiat
-        officiis necessitatibus consectetur blanditiis in inventore provident.
-        Fugiat, ea? Nostrum ratione expedita est magni? Dignissimos,
-        exercitationem? Sequi autem nisi magni error maxime necessitatibus
-        dignissimos laboriosam voluptatibus odio neque ex, aliquam officia,
-        dolore quo, earum doloribus. Nobis dolor dolorem illum modi fugit
-        blanditiis ipsum. Repudiandae, doloribus quidem. Aliquam libero
-        asperiores, illo labore at illum ullam nam fugiat aut cum cupiditate
-        quae, perspiciatis perferendis quidem soluta? Ab nesciunt delectus eos,
-        amet quos voluptatibus incidunt iusto ipsam fugiat labore qui magni,
-        illo libero temporibus eum vero sint dolor rem provident exercitationem
-        deserunt, voluptatum dolorem! Neque odio molestiae deleniti nesciunt
-        ratione corporis totam quae incidunt assumenda id eaque quibusdam est,
-        mollitia voluptatibus atque in tempora excepturi quod dolor eveniet quos
-        tenetur dolorem nihil exercitationem. Assumenda adipisci hic eaque et
-        earum nostrum, ut unde consectetur laboriosam culpa consequuntur
-        doloremque deleniti nihil dolore autem at sequi quae beatae est aliquam
-        velit quasi? In est porro cupiditate architecto perspiciatis, sapiente
-        laborum voluptatem minima inventore ad sunt eaque quibusdam, dolores
-        deserunt dolore nihil illo. Pariatur nam culpa, dolor veritatis
-        consequuntur quia fuga eum quae ipsum minima repellat numquam quis,
-        tempora sint nobis, molestiae consectetur? Accusantium vitae sequi sit,
-        aliquam temporibus deleniti eum cum aliquid exercitationem earum, eos,
-        dicta facere corrupti similique voluptatem illum odio modi. Modi
-        perspiciatis voluptatem laboriosam quae, culpa nobis corrupti fugiat
-        quaerat unde. Ullam blanditiis sit adipisci harum nihil, sapiente minima
-        enim voluptatem necessitatibus fugit eum, laudantium mollitia ab modi.
-        Fugit officia cumque accusantium consequatur minima, saepe vero harum
-        id, magni, ipsam officiis ea. Corporis veniam asperiores repellendus
-        deserunt placeat quasi ratione pariatur cum commodi? Quibusdam odio eum
-        assumenda voluptatibus, sint nemo provident vitae asperiores numquam
-        neque laborum eius, accusantium unde? Doloribus dolorum dolorem, aut
-        quas perferendis beatae labore molestias quam quo, quasi enim corporis
-        illum quaerat. Voluptates maxime error quaerat, ad voluptatum nam
-        dignissimos culpa deserunt quam consequatur, voluptatem cumque impedit
-        ullam nemo architecto deleniti placeat esse. Voluptates ad quisquam
-        accusamus sit qui esse praesentium temporibus explicabo eos ut quis
-        dignissimos facilis cupiditate accusantium aliquam nulla dicta quibusdam
-        sed totam, a porro dolore velit! Nam laboriosam magnam praesentium
-        dignissimos nihil voluptatem voluptate qui temporibus reiciendis
-        dolores, quod veritatis. Deserunt animi placeat excepturi officia
-        dolores nobis atque veritatis, dignissimos delectus culpa quam amet unde
-        qui id consequuntur repellat. Numquam, voluptatibus. Doloribus iusto
-        animi similique quae porro magni amet ipsa. Deserunt rem, praesentium
-        quidem earum nisi id, impedit repellat nostrum consequuntur vel
-        consectetur consequatur dolorum aliquid exercitationem eaque voluptatum,
-        explicabo et nulla! Totam, nulla minus optio deleniti quod expedita
-        porro at assumenda atque quos eos numquam necessitatibus eum magni
-        placeat, facilis officiis impedit. Qui blanditiis iusto quaerat
-        asperiores ipsum maxime incidunt sapiente cum quos quisquam odio dolor,
-        rerum sequi, quidem illo neque laudantium dicta beatae facilis porro
-        cupiditate eveniet velit quia iure? Harum nisi vero quidem explicabo
-        accusantium nobis deserunt, id unde alias ipsam fuga saepe! Non!
+        While his surroundings often drew people into cycles of crime, Vince
+        initially managed to stay out of trouble, thanks in part to his mother,
+        who sought to keep him away from dangerous influences. However, as a
+        teenager, Staples became more deeply involved in the street life that
+        surrounded him, eventually affiliating with the Crips gang. His
+        experiences growing up in these challenging circumstances, witnessing
+        violence, and the struggles of the people around him would later serve
+        as the foundation for much of his storytelling in music.
+      </p>
+
+      <p>
+        Vince Staples didn't initially see music as a viable career path. His
+        introduction to the music scene came through friendships with members of
+        the hip-hop collective Odd Future, particularly Earl Sweatshirt. Staples
+        would accompany Earl and other members of the group to the studio, where
+        he began to see the potential of using music as an outlet for his
+        thoughts and experiences. This exposure to the recording process and the
+        encouragement of his peers led him to consider rap as a serious pursuit.
+      </p>
+      <p>
+        His breakthrough came in 2011 when he appeared on the track "epaR" from
+        Earl Sweatshirt's mixtape *Earl*. The track gave him his first taste of
+        recognition within the underground rap scene. Encouraged by the positive
+        reception, Staples began working on his own music. His first solo
+        project, a mixtape titled *Shyne Coldchain Vol. 1*, was released in
+        2011, showcasing his raw storytelling and gritty lyrics that reflected
+        the harsh realities of his upbringing. 
+      </p>
+      <p>
+        Staples gained further momentum
+        when he caught the attention of veteran rapper and producer Mac Miller,
+        who invited him to collaborate. Together, they worked on Vince’s *Stolen
+        Youth* mixtape in 2013, with Miller producing much of the project under
+        the alias Larry Fisherman. The mixtape helped Staples garner critical
+        acclaim and introduced him to a wider audience. His lyrics stood out for
+        their sharp, observational style and introspective nature, focusing on
+        themes such as poverty, violence, and existential struggles. 
+      </p> 
+      <p>
+        In 2014,
+        Staples signed to Def Jam Recordings and released his debut EP, *Hell
+        Can Wait*, which included the popular single "Hands Up," a politically
+        charged track addressing police brutality. His debut studio album,
+        *Summertime '06*, followed in 2015, marking a turning point in his
+        career. The album, produced largely by No I.D., was a critical success,
+        praised for its dense production and candid exploration of his life
+        growing up in Long Beach. 
+      </p>  
+      <p>
+        Vince Staples has continued to evolve as an
+        artist, balancing mainstream success with his commitment to telling
+        authentic, unvarnished stories about his community. His music is a
+        reflection of the duality of his experiences: navigating between the
+        violence of his youth and his efforts to rise above it.
       </p>
     </section>
     <footer class="main-footer">
